# libvideocxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_cmake.yml
cmake/: BuildLocation.cmake  Common.cmake  FindFFmpeg.cmake
src/: CMakeLists.txt  demo.cc  ffmpeg.h  main.cc
src/ffmpeg/: CMakeLists.txt  ChannelLayouts.h  Frame.h  README.md  demo.cc  extract_audio_from_video.cc  ffmpeg_util.h  stream.h  stream_reader.h  stream_writer.h
